# MathUtil

./: CMakeLists.txt  README.md  doDebugBuild.bat
.github/workflows/: cmake.yaml  cmake.yml
include/: Integration.hpp  MathUtil.hpp  Matrix.hpp
lib/: CMakeLists.txt  Integration.cpp  MathUtil.cpp  Matrix.cpp
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test.cpp
